--- a/d3js Lab Tutorial/index.html
+++ b/d3js Lab Tutorial/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <title>Sequences sunburst</title>
     <script src="http://d3js.org/d3.v3.min.js"></script>
-    <script type="text/javascript" src="sequences.js"></script>
-    <script type="text/javascript">
+
     <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,600">
     <link rel="stylesheet" type="text/css" href="sequences.css"/>
@@ -24,9 +23,10 @@
       <input type="checkbox" id="togglelegend"> Legend<br/>
       <div id="legend" style="visibility: hidden;"></div>
     </div>
-
+    <script type="text/javascript" src="sequences.js"></script>
+    <script type="text/javascript">
       // Hack to make this example display correctly in an iframe on bl.ocks.org
-      //d3.select(self.frameElement).style("height", "700px");
+      d3.select(self.frameElement).style("height", "700px");
   </script> 
   </body>
 </html>
